<resources>
    <string name="app_name">BMI APP</string>
    <string name="enter_weight_kg">Enter Weight (kg)</string>
    <string name="enter_height_meters">Enter Height (cm)</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="your_bmi">Your BMI:</string>
    <string name="bmi_calculator_title">BMI Calculator</string>
    <string name="enter_your_age">Enter Your Age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="bmi_result">Your BMI: %.2f\nInterpretation: %s</string>
    <string name="age_out_of_range">Age out of range</string>
    <string name="invalid_height">Please enter a valid height.</string>
    <string name="invalid_weight">Please enter a valid weight.</string>
    <string name="invalid_age">Please enter a valid age.</string>
    <string name="invalid_input">Invalid input. Please fill in all fields.</string>
    <string name="clear">Clear</string>
    <string name="fill_all_fields">Please fill in all fields</string>
    <string name="weight_label">Weight (kg)</string>
    <string name="height_label">Height (meters)</string>
    <string name="age_label">Age</string>



</resources>